[AR] sistemati accenti

--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -262,7 +262,7 @@ L'utente pu\`o cancellare totalmente quanto fino a quel momento \`e stato disegn
 \item Il canvas viene completamente cancellato.
 \end{elenconumerato}
 \paragraph{Precondizioni} Il canvas \`e visibile all'utente.
-\paragraph{Postcondizioni} Il canvas \`e visibile all'utente ed è vuoto.
+\paragraph{Postcondizioni} Il canvas \`e visibile all'utente ed \`e vuoto.
 
 \subsubsezione{UC2 Caso d'uso: visualizza manuale}
 \paragraph{Attori coinvolti} Utente.
@@ -403,7 +403,7 @@ Il sistema permette all'utente di disegnare una linea retta o una curva di Bezie
 \item Il sistema disegna la linea/curva.
 \end{elenconumerato}
 \paragraph{Precondizioni} Il canvas \`e visualizzato all'utente vuoto o con modifiche.
-\paragraph{Postcondizioni} Il canvas è visualizzato come da precondizione, in aggiunta mostra la nuova retta/curva disegnata.
+\paragraph{Postcondizioni} Il canvas \`e visualizzato come da precondizione, in aggiunta mostra la nuova retta/curva disegnata.
 
 \subsubsezione{UC9.2 Caso d'uso: disegna quadrato/rettangolo}
 \paragraph{Attori coinvolti} Utente.
@@ -416,7 +416,7 @@ Il sistema permette all'utente di disegnare un quadrato o un rettangolo di quals
 \item Il sistema disegna il quadrato/rettangolo.
 \end{elenconumerato}
 \paragraph{Precondizioni} Il canvas \`e visualizzato all'utente vuoto o con modifiche.
-\paragraph{Postcondizioni} Il canvas è visualizzato come da precondizione, in aggiunta mostra il nuovo quadrato/rettangolo disegnato.
+\paragraph{Postcondizioni} Il canvas \`e visualizzato come da precondizione, in aggiunta mostra il nuovo quadrato/rettangolo disegnato.
 
 \subsubsezione{UC9.3 Caso d'uso: disegna poligono}
 \paragraph{Attori coinvolti} Utente.
@@ -430,7 +430,7 @@ Il sistema permette all'utente di disegnare un poligono di qualsiasi dimensione 
 \item Il sistema disegna il poligono.
 \end{elenconumerato}
 \paragraph{Precondizioni} Il canvas \`e visualizzato all'utente vuoto o con modifiche.
-\paragraph{Postcondizioni} Il canvas è visualizzato come da precondizione, in aggiunta mostra il nuovo poligono disegnato.
+\paragraph{Postcondizioni} Il canvas \`e visualizzato come da precondizione, in aggiunta mostra il nuovo poligono disegnato.
 
 \subsubsezione{UC9.4 Caso d'uso: disegna cerchio/ellisse}
 \paragraph{Attori coinvolti} Utente.
@@ -443,7 +443,7 @@ Il sistema permette all'utente di disegnare un cerchio o un'ellisse di qualsiasi
 \item Il sistema disegna il cerchio o l'ellisse.
 \end{elenconumerato}
 \paragraph{Precondizioni} Il canvas \`e visualizzato vuoto o con modifiche.
-\paragraph{Postcondizioni} Il canvas è visualizzato come da precondizione, in aggiunta mostra il nuovo cerchio o la nuova ellisse disegnato/a.
+\paragraph{Postcondizioni} Il canvas \`e visualizzato come da precondizione, in aggiunta mostra il nuovo cerchio o la nuova ellisse disegnato/a.
 
 \subsubsezione{UC9.5 Caso d'uso: disegna casella di testo}
 \paragraph{Attori coinvolti} Utente.
@@ -457,7 +457,7 @@ Il sistema permette all'utente di disegnare una casella di testo.
 \item Il sistema disegna la casella di testo.
 \end{elenconumerato}
 \paragraph{Precondizioni} Il canvas \`e visualizzato vuoto o con modifiche.
-\paragraph{Postcondizioni} Il canvas è visualizzato come da precondizione, in aggiunta mostra la nuova casella di testo disegnata.
+\paragraph{Postcondizioni} Il canvas \`e visualizzato come da precondizione, in aggiunta mostra la nuova casella di testo disegnata.
 
 \subsubsezione{UC9.6 Caso d'uso: seleziona colore bordo/linea}
 \paragraph{Attori coinvolti} Utente.
@@ -469,7 +469,7 @@ Il sistema permette all'utente di selezionare il colore del bordo della figura d
 \item Il sistema imposta il colore dato dall'utente come base per la figura da disegnare.
 \end{elenconumerato}
 \paragraph{Precondizioni} Il canvas \`e visualizzato all'utente vuoto o con modifiche.
-\paragraph{Postcondizioni} Il canvas è visualizzato come da precondizione. La prossima figura verr\` a disegnata con il colore del bordo selezionato.
+\paragraph{Postcondizioni} Il canvas \`e visualizzato come da precondizione. La prossima figura verr\` a disegnata con il colore del bordo selezionato.
 
 \subsubsezione{UC9.7 Caso d'uso: seleziona colore riempimento}
 \paragraph{Attori coinvolti} Utente.
@@ -481,7 +481,7 @@ Il sistema permette all'utente di selezionare il colore di riempimento del polig
 \item Il sistema imposta il colore dato dall'utente come base per la figura da disegnare.
 \end{elenconumerato}
 \paragraph{Precondizioni} Il canvas \`e visualizzato vuoto o con modifiche.
-\paragraph{Postcondizioni} Il canvas è visualizzato come da precondizione. La prossima figura verr\` a disegnata con il colore di riempimento selezionato.
+\paragraph{Postcondizioni} Il canvas \`e visualizzato come da precondizione. La prossima figura verr\` a disegnata con il colore di riempimento selezionato.
 
 \subsubsezione{UC9.8 Caso d'uso: selezione font e dimensione carattere}
 \paragraph{Attori coinvolti} Utente.
@@ -493,7 +493,7 @@ Il sistema permette all'utente di selezionare il tipo e la dimensione del caratt
 \item Il sistema imposta i valori dati dall'utente come base per la prossima casella di testo da disegnare.
 \end{elenconumerato}
 \paragraph{Precondizioni} Il canvas \`e visualizzato vuoto o con modifiche.
-\paragraph{Postcondizioni} Il canvas è visualizzato come da precondizione. La prossima casella di testo verr\` a disegnata con i parametri selezionati.
+\paragraph{Postcondizioni} Il canvas \`e visualizzato come da precondizione. La prossima casella di testo verr\` a disegnata con i parametri selezionati.
 
 \subsubsezione{UC9.9 Caso d'uso: disegna spirale}
 \paragraph{Attori coinvolti} Utente.
@@ -506,7 +506,7 @@ Il sistema permette all'utente di disegnare una spirale.
 \item Il sistema disegna la spirale.
 \end{elenconumerato}
 \paragraph{Precondizioni} Il canvas \`e visualizzato vuoto o con modifiche.
-\paragraph{Postcondizioni} Il canvas è visualizzato come da precondizione, in aggiunta mostra la nuova spirale disegnata.
+\paragraph{Postcondizioni} Il canvas \`e visualizzato come da precondizione, in aggiunta mostra la nuova spirale disegnata.
 
 \subsubsezione{UC9.10 Caso d'uso: disegno di linee a mano libera}
 \paragraph{Attori coinvolti} Utente.
@@ -519,7 +519,7 @@ Il sistema permette all'utente di disegnare linee a mano libera.
 \item Il sistema disegna la linea creata.
 \end{elenconumerato}
 \paragraph{Precondizioni} Il canvas \`e visualizzato vuoto o con modifiche.
-\paragraph{Postcondizioni} Il canvas è visualizzato come da precondizione, in aggiunta mostra la nuova linea a mano libera.
+\paragraph{Postcondizioni} Il canvas \`e visualizzato come da precondizione, in aggiunta mostra la nuova linea a mano libera.
 
 \subsubsezione{UC9.11 Caso d'uso: disegno calligrafico}
 \paragraph{Attori coinvolti} Utente.
@@ -532,7 +532,7 @@ Il sistema permette all'utente di creare linee calligrafiche che emulano l'azion
 \item Il sistema disegna la linea creata.
 \end{elenconumerato}
 \paragraph{Precondizioni} Il canvas \`e visualizzato vuoto o con modifiche.
-\paragraph{Postcondizioni} Il canvas è visualizzato come da precondizione, in aggiunta mostra la nuova linea calligrafica.
+\paragraph{Postcondizioni} Il canvas \`e visualizzato come da precondizione, in aggiunta mostra la nuova linea calligrafica.
 
 \subsubsezione{UC9.12 Caso d'uso: disegno connettori di diagrammi}
 \paragraph{Attori coinvolti} Utente.
@@ -545,7 +545,7 @@ Il sistema permette all'utente di disegnare dei connettori di diagrammi.
 \item Il sistema disegna il connettore creato.
 \end{elenconumerato}
 \paragraph{Precondizioni} Il canvas \`e visualizzato vuoto o con modifiche.
-\paragraph{Postcondizioni} Il canvas è visualizzato come da precondizione, in aggiunta mostra il nuovo connettore creato.
+\paragraph{Postcondizioni} Il canvas \`e visualizzato come da precondizione, in aggiunta mostra il nuovo connettore creato.
 \newpage
 \subsezione{Vista UC10 - Seleziona e Modifica}
 \label{ucselezionaemodifica}
@@ -619,7 +619,7 @@ Il sistema consente di modificare la dimensione dei caratteri del testo di una c
 
 \subsubsezione{UC10.5  Caso d'uso: imposta l'opacit\` a}
 \paragraph{Attori coinvolti} Utente.
-\paragraph{Scopo e descrizione sintetica}  Il sistema consente di modificare il livello di opacit\` a di un qualsiasi oggetto presente nel canvas. Il valore si esprime in \%.   \` E quindi possibile rendere un oggetto pienamente visibile (100\%), non visibile (0\%), e situazioni intermedie.
+\paragraph{Scopo e descrizione sintetica}  Il sistema consente di modificare il livello di opacit\` a di un qualsiasi oggetto presente nel canvas. Il valore si esprime in percentuale.   \` E quindi possibile rendere un oggetto pienamente visibile (100\%), non visibile (0\%), e situazioni intermedie.
 \paragraph{Flusso di eventi}
 \begin{elenconumerato}[\textbf{}]{\subsubsecindent}
 \item L'utente seleziona un oggetto valido.
@@ -716,7 +716,7 @@ Il sistema consente di modificare la dimensione dei caratteri del testo di una c
 \item  L'utente usa il cursore o le coordinate assolute per modificare le dimensioni dell'oggetto.
 \end{elenconumerato}
 \paragraph{Precondizioni} L'utente ha scelto un oggetto presente nel canvas. Se le dimensioni sono superiori a un valore massimo relativo della dimensione del canvas, il sistema le imposta alla massima dimensione consentita.
-\paragraph{Postcondizioni} Le propriet\`a  degli stili grafici della casella di testo indicano che le dimensioni dell'oggetto sono quelle selezionate. L'oggetto si ingrandir\` a/rimpicciolir\`a  seconda dell'input.
+\paragraph{Postcondizioni} Le propriet\`a  degli stili grafici della casella di testo indicano che le dimensioni dell'oggetto sono quelle selezionate. L'oggetto si ingrandir\` a/rimpicciolir\`a a seconda dell'input.
 
 
 %%%%%%%%%%%%%%%%inizio requisiti%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
