Gl:aggiunti termini

--- a/doc/Glossario/Glossario.tex
+++ b/doc/Glossario/Glossario.tex
@@ -200,7 +200,7 @@ L'HTML non \` e un linguaggio di programmazione, ma un \hyperlink{linguaggio di 
 
 \hypertarget{html5}{}
 \textbf{HTML 5:}
-HTML 5 è un \hyperlink{linguaggio di markup}{\underline{Linguaggio di markup}} per la progettazione delle pagine web attualmente in fase di definizione, presso il \hyperlink{w3c}{\underline{W3C}}.\\
+HTML 5 \` e un \hyperlink{linguaggio di markup}{\underline{Linguaggio di markup}} per la progettazione delle pagine web attualmente in fase di definizione, presso il \hyperlink{w3c}{\underline{W3C}}.\\
 
 \section*{J}
 \hypertarget{javascript}{}
@@ -243,12 +243,17 @@ Si veda Server Web.\\
 
 \hypertarget{serverweb}{}
 \textbf{Server Web:}
-Un server web o server HTTP è un processo, e per estensione il computer su cui è in esecuzione, che si occupa di fornire, su richiesta del browser, una pagina web. Le informazioni inviate dal web server viaggiano in rete trasportate dal protocollo HTTP. L'insieme di server web dà vita al \hyperlink{www}{\underline{WWW}}.\\ 
+Un server web o server HTTP \` e un processo, e per estensione il computer su cui \` e in esecuzione, che si occupa di fornire, su richiesta del browser, una pagina web. Le informazioni inviate dal web server viaggiano in rete trasportate dal protocollo HTTP. L'insieme di server web d\` a vita al \hyperlink{www}{\underline{WWW}}.\\ 
 
 
 \hypertarget{svg}{}
 \textbf{SVG:}
 L' SVG (Scalable Vector Graphics) \` indica una tecnologia in grado di visualizzare oggetti di grafica vettoriale e, per questo motivo, di gestire immagini scalabili dimensionalmente.\\
+
+\section*{T}
+\hypertarget{toolbar}{}
+\textbf{Toolbar:}
+La toolbar (lett. barra degli strumenti) \` e un componente (\hyperlink{widget}{\underline{widget}}) molto diffuso nelle interfacce utente. \` E una barra orizzontale o verticale, o un box, che raccoglie, sotto forma di icone o pulsanti, i collegamenti alle funzioni pi\` u usate di un software.\\
 
 \section*{W}
 \hypertarget{w3c}{}
@@ -258,6 +263,10 @@ Il W3C \`e un'associazione internazionale fondata nel 1994 con lo scopo di migli
 \hypertarget{web}{}
 \textbf{Web:}
 Si veda \hyperlink{www}{\underline{WWW}}.\\
+
+\hypertarget{widget}{}
+\textbf{Widget:}
+Un widget \` e un elemento (tipicamente grafico) di una interfaccia utente di un programma che facilita all'utente l'interazione con il programma stesso. In italiano \`  e detto  elemento grafico; pu\` o essere una vera e propria miniapplicazione.\\
 
 \hypertarget{wiki}{}
 \textbf{Wiki:}
