--- a/doc/SpecificaTecnica/SpecificaTecnica.tex
+++ b/doc/SpecificaTecnica/SpecificaTecnica.tex
@@ -220,7 +220,7 @@ Implementando il metodo astratto \textit{getMainPoints} di \textit{Figure} \`e p
 \subsubsezione{Intefaccia Grafica (GUI)}
 [inserire diagramma delle classi] \\
 La GUI \` e ovviamente il client che verr\` a utilizzato nel sistema AJAXDRAW, e verr\` a descritta brevemente, in quanto rappresenta solo una 
-unit\` a che andr\`  a  a lavorare sulle altre componenti di sistema. \` E costruita nella sua totalit\` a nella pagina web caricata dal browser, pagina rappresentata dalla classe \textit{Page}, sulla quale vengono creati tutti i widgets con i quali interagire (che implementano tutti l'interfaccia generica \textit{Widget}).  I widgets si suddividono in \textit{Toolbar}(barra degli strumenti), \textit{Button} (pulsante generico
+unit\` a che andr\`  a  a lavorare sulle altre componenti di sistema. \` E costruita nella sua totalit\` a nella pagina web caricata dal browser, pagina rappresentata dalla classe \textit{Page}, composta da tutti i widgets con i quali interagire (che implementano tutti l'interfaccia generica \textit{Widget}).  I widgets si suddividono in \textit{Toolbar}(barra degli strumenti), \textit{Button} (pulsanti generici, che compongono anche la toolbar stessa), \textit{Palette} e \textit{ColourDialog}(per la gestione del colore), \textit{PropertiesDialog}(per la modifica delle propriet\` a, che aggrega gli specifici \textit{Setter}. La pagina \` e composta inoltre dalla classe \textit{Visualization}, la quale gestisce il \textit{Canvas} e tutte le operazioni su di esso svolte. Le classi che rappresentano oggetti con cui \` necessario interagire tramite mouse implementano tutti l'interfaccia \textit{UserClickEvent}, e tra queste vi \` e ovviamente la classe \textit{Canvas}, che oltre a questa implementa anche \textit{MouseMovePressed} e \textit{MouseMoveReleased}, necessarie al disegno tramite il mouse.  
 \subsubsezione{Logica interna}
 Questo sottosistema si divide in tre ulteriori sottosistemi
 \subsubsezione{Gestione figure}
