--- a/doc/SpecificaTecnica/SpecificaTecnica.tex
+++ b/doc/SpecificaTecnica/SpecificaTecnica.tex
@@ -171,9 +171,6 @@ Il software AJAXDRAW \`e proposto per verificare e dimostrare la fattibilit\`a d
 
 \subsezione{Glossario}
 All'interno del documento \textit{Glossario}, sono presentati i termini tecnici utilizzati in tutti i documenti. Il glossario \`e fornito in allegato al presente documento.
-\subsubsezione{Definizioni}
-\subsubsezione{Acronimi}
-\subsubsezione{Abbreviazioni}
 \subsezione{Riferimenti}
 Il presente documento \`e redatto utilizzando le convenzioni inserite nel documento \textit{NormeDiProgetto}, consultabile dal repository pubblico al quale WebShape si appoggia per i suoi progetti.
 \subsubsezione{Normativi}
@@ -225,7 +222,7 @@ unit\` a che andr\`  a  a lavorare sulle altre componenti di sistema. \` E costr
 Questo sottosistema si divide in tre ulteriori sottosistemi
 \subsubsezione{Gestione figure}
 [inserire diagramma delle classi] \\
-Si occupa della gestione interna delle figure disegnabili e manipolabili dall'utente e delle relative propriet\`a. Il termine \textit{figura} in questo contesto include anche i testi disegnati sul canvas. La classe \textit{Figure} rappresenta una figura qualsiasi. Una figura \`e caratterizzata da delle propriet\`a derivate dalla classe \textit{Property}. La suddetta classe contiene un metodo \textit{createWidget} per fabbricare un elemento grafico che permette all'utente di modificare la propriet\`a che lo ha generato. Ogni figura contiene un \textit{BoundingRectangle} che rappresenta la cornice entro cui la figura \`e completamente contenuta. Una figura pu\`o essere selezionata oppure no. Le classi che implementano \textit{Figure} sono responsabili di disegnarsi sul canvas implementando il metodo \textit{draw}. In questo metodo, non si dovr\`a tener conto dell'area correntemente visualizzata o del livello di zoom, in quanto gestiti in modo trasparente dalla classe \textit{Visualization}. Ad ogni figura \`e associato un insieme di punti significativi, come ad esempio i vertici in un quadrato, ottenibili tramite il metodo \textit{getMainPoints}. Ogni figura mantiene un colore del bordo, rappresentato dalla classe \textit{Colour}. Le classi \textit{Circle}, \textit{Polygon} e \textit{Rectangle} aggiungono un ulteriore colore per il riempimento, rappresentato dalla classe \textit{FillColour}. La classe \textit{Text} rappresenta un testo disegnato dall'utente, e mantiene delle propriet\`a derivate dalla classe \textit{TextProperty}. A fini implementativi, le propriet\`a del testo e del colore andranno rappresentate secondo lo standard \textit{CSS}, quindi le suddette propriet\`a dovranno implementare l'interfaccia \textit{CSSProperty} che offre il metodo \textit{toCSS} responsabile della conversione dalla rappresentazione interna a quella \textit{CSS}. La classe \textit{FigureSet} mantiene l'insieme delle istanze di \textit{Figure} correntemente disegnate dall'utente e offre la possibilit\`a di selezionarne una a partire da un punto sul canvas.
+Si occupa della gestione interna delle figure disegnabili e manipolabili dall'utente e delle relative propriet\`a. Il termine \textit{figura} in questo contesto include anche i testi disegnati sul canvas. La classe \textit{Figure} rappresenta una figura qualsiasi. Una figura \`e caratterizzata da delle propriet\`a derivate dalla classe \textit{Property}. La suddetta classe contiene un metodo \textit{createWidget} per fabbricare un elemento grafico, il quale permette all'utente di modificare la propriet\`a che ha generato il widget stesso. Ogni figura contiene un \textit{BoundingRectangle} che rappresenta la cornice entro cui la figura \`e completamente contenuta. Una figura pu\`o essere selezionata oppure no. Le classi che implementano \textit{Figure} sono responsabili di disegnarsi sul canvas implementando il metodo \textit{draw}. In questo metodo, non si dovr\`a tener conto dell'area correntemente visualizzata o del livello di zoom, in quanto gestiti in modo trasparente dalla classe \textit{Visualization}. Ad ogni figura \`e associato un insieme di punti significativi, come ad esempio i vertici in un quadrato, ottenibili tramite il metodo \textit{getMainPoints}. Ogni figura mantiene un colore del bordo, rappresentato dalla classe \textit{Colour}. Le classi \textit{Circle}, \textit{Polygon} e \textit{Rectangle} aggiungono un ulteriore colore per il riempimento, rappresentato dalla classe \textit{FillColour}. La classe \textit{Text} rappresenta un testo disegnato dall'utente, e mantiene delle propriet\`a derivate dalla classe \textit{TextProperty}. A fini implementativi, le propriet\`a del testo e del colore andranno rappresentate secondo lo standard \textit{CSS}, quindi le suddette propriet\`a dovranno implementare l'interfaccia \textit{CSSProperty} che offre il metodo \textit{toCSS} responsabile della conversione dalla rappresentazione interna a quella \textit{CSS}. La classe \textit{FigureSet} mantiene l'insieme delle istanze di \textit{Figure} correntemente disegnate dall'utente e offre la possibilit\`a di selezionarne una a partire da un punto sul canvas.
 \subsubsezione{Conversione in \textit{SVG}}
 [inserire diagramma delle classi] \\
 Si occupa di trasformare il \textit{FigureSet} corrente in una stringa 
