ST: aggiornata tabella modifiche

--- a/doc/SpecificaTecnica/SpecificaTecnica.tex
+++ b/doc/SpecificaTecnica/SpecificaTecnica.tex
@@ -145,6 +145,11 @@ Il presente documento descrive le scelte tecniche, architetturali e tecnologiche
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+          0.5 & 22/01/2009 Correzioni in seguito a verifica & Dissegna Stefano \\
+          0.4 & 22/01/2009 Descrizione design pattern & Dissegna Stefano \\
+          0.3 & 21/01/2009 Descrizione generale e delle classi per ApplicationLogic & Dissegna Stefano \\
+          0.2 & 20/01/2009 Diagrammi di sequenza per ApplicationLogic & Dissegna Stefano \\
+          0.1 & 19/01/2009 Diagramma delle classi per ApplicationLogic & Dissegna Stefano \\
     	  0.0 & 15/01/2009 Bozza iniziale & Dal Bosco Davide \\
 		\hline %%FINE RIGA
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
