--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -2,7 +2,7 @@
 \usepackage{multirow}
 \begin{document}
 
-\renewcommand{\insertversion}{1.2} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{1.3} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Analisi dei Requisiti} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 
 \begin{titlepage}
@@ -37,7 +37,7 @@
 	\end{Huge}
 			\\
 \end{center}
-\vspace{220pt}
+\vspace{200pt}
 \begin{center}
 Versione: \insertversion
 \end{center}
@@ -106,7 +106,7 @@ Tale studio \`e mirato alla comprensione dei bisogni espressi nel capitolato e a
 			\multirow{2}{*}{Pre-RR}  &  Cunico Marco\\
 									&  \\
 			\hline
-			\multirow{2}{*}{RR-RPP} & \\
+			\multirow{2}{*}{RR-RPP} & Geremia Mirco\\
 									& \\
 			\hline
 			%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -125,7 +125,7 @@ Tale studio \`e mirato alla comprensione dei bisogni espressi nel capitolato e a
 		\item I committenti Conte Renato e Vardanega Tullio in rappresentanza \\  dell'azienda proponente Zucchetti SPA
 	\end{elenconumerato}
 
-%\newpage
+\newpage
 
 \section*{\LARGE Registro delle Modifiche:}
 
@@ -141,9 +141,11 @@ Tale studio \`e mirato alla comprensione dei bisogni espressi nel capitolato e a
 
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
                 \hline
-				1.2 & 21$\slash$01$\slash$2009 Modifica ad U.C.  & Cunico Marco \\
+				1.3 & 22$\slash$01$\slash$2009 Modifiche eseguite su segnalazione del verificatore.  & Cunico Marco \\
                 \hline
-				1.1 & 14$\slash$01$\slash$2009 Inserita tabella tracciamento "Requisiti-Casi d'uso" e modifiche a U.C.10 & Cunico Marco \\
+				1.2 & 21$\slash$01$\slash$2009 Modifica ad U.C. Interazione.  & Cunico Marco \\
+                \hline
+				1.1 & 14$\slash$01$\slash$2009 Inserita tabella tracciamento ''Requisiti-Casi d'uso'' e modifiche a U.C.10. & Cunico Marco \\
 				\hline
 				1.0 & 09$\slash$12$\slash$2008  Verifica finale in preparazione al rilascio. & Bizzotto Piero \\
 				\hline
@@ -386,7 +388,7 @@ Il seguente grafico illustra le interazioni tra l'utente e il sistema per disegn
 \begin{figure}[!ht]
 \centering
 \vspace{20pt} 
-\includegraphics{UC9Espanso}
+\includegraphics{UC9Espanso.jpg}
 \caption{UC9 Caso d'uso: disegna}
 \label{uc9}
 \end{figure}
@@ -724,7 +726,7 @@ Il sistema consente di modificare la dimensione dei caratteri del testo di una c
 \label{listarequisiti}
 I requisiti elencati in seguito si dividono per tipologia (funzionale, prestazionale, di qualit\`a, di interfacciamento, d'ambiente); 
 per ognuna \`e presente una classificazione per classe di importanza (obbligatorio, desiderabile, facoltativo). Viene inoltre indicata la fonte usando un riferimento alle aspettative descritte in \textit{Aspettative.pdf}.
-Tutti i requisiti elencati in seguito sono espliciti del capitolato. 
+Tutti i requisiti elencati in seguito derivano unicamente ed esplicitamente dal capitolato.
 \subsezione{Requisiti funzionali (RF)}
 \subsubsezione{Obbligatori (RFO)}
 \begin{elenconumerato}[\textbf{RFO-}]{\subsubsecindent}
