ST: immagine diag.

--- a/doc/SpecificaTecnica/SpecificaTecnica.tex
+++ b/doc/SpecificaTecnica/SpecificaTecnica.tex
@@ -226,7 +226,7 @@ La GUI \` e  il client che verr\` a utilizzato nel sistema AJAXDRAW, e verr\` a 
 
 \begin{figure}[!ht]
 \centering
-\includegraphics{applogic.png}
+\includegraphics{applogic.jpg}
 \caption{ApplicationLogic}
 \end{figure}
 
