ST: stime di fattibilita'

--- a/doc/SpecificaTecnica/SpecificaTecnica.tex
+++ b/doc/SpecificaTecnica/SpecificaTecnica.tex
@@ -615,16 +615,10 @@ Usa \textit{Request} per effettuare una richiesta al server.
 \end{elencopuntato}
 
 
-\subsezione{Tipo, obiettivo e funzione del componente}
-\subsezione{Relazioni d'uso di altre componenti}
-\subsezione{Interfacce e relazioni di uso da altre componenti}
-\subsezione{Attivit\`a svolte e dati trattati}
 \sezione{Stime di fattibilit\`a e di bisogno di risorse}
+Il maggiore collo di bottiglia del sistema \`e rappresentato dal server, in quanto una singola macchina pu\`o trovarsi a gestire un numero elevato di richieste. Non dovrebbero comunque esserci problemi in quanto le funzionalit\`a implementate lato server sono minime, e quindi ogni singolo client comporta un dispendio di risorse, in termini di tempo di calcolo, di spazio su disco e di banda, minimo. 
+Un secondo problema prestazionale \`e rappresentato dal fatto che l'applicazione sar\`a forzatamente scritta in \underline{JavaScript}, la cui implementazione \`e estremamente scadente dal punto di vista delle prestazioni in quasi tutti i browser, fatta eccezione per Google Chrome, l'unico a fornire un sistema di compilazione \underline{JIT}. Per questo, durante l'implementazione si dovr\`a porre una costante attenzione alle risorse richieste dai diversi metodi.
+
 \sezione{Tracciamento della relazione componenti-requisiti}
-
-
-
-
-			
 
 \end{document}
