--- a/doc/SpecificaTecnica/SpecificaTecnica.tex
+++ b/doc/SpecificaTecnica/SpecificaTecnica.tex
@@ -602,6 +602,18 @@ Usata dai metodi di iterazione, come ad esempio \textit{each} di \textit{FigureS
 \item[-] \textit{call} richiama la funzione.
 \end{elencopuntato}
 
+\subsezione{Document}
+\subsubsezione{Tipo, obiettivo e funzione del componente}
+Permette di salvare e caricare file.
+\subsubsezione{Relazioni d'uso di altre componenti}
+Usa \textit{Request} per effettuare una richiesta al server.
+\subsubsezione{Interfacce e relazioni di uso da altre componenti}
+\subsubsezione{Attivit\`a svolte e dati trattati}
+\begin{elencopuntato}[\normindent]
+\item[-] \textit{save} chiede il salvataggio di un file.
+\item[-] \textit{load} chiede il caricamento di un file.
+\end{elencopuntato}
+
 
 \subsezione{Tipo, obiettivo e funzione del componente}
 \subsezione{Relazioni d'uso di altre componenti}
@@ -609,6 +621,10 @@ Usata dai metodi di iterazione, come ad esempio \textit{each} di \textit{FigureS
 \subsezione{Attivit\`a svolte e dati trattati}
 \sezione{Stime di fattibilit\`a e di bisogno di risorse}
 \sezione{Tracciamento della relazione componenti-requisiti}
+
+
+
+
 			
 
 \end{document}
