[PP] Aggiunto consuntivo

--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 
-\renewcommand{\insertversion}{1.1} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{1.2} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Piano di Progetto} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
 
@@ -150,6 +150,8 @@ Il presente documento descrive l'analisi dei costi e delle risorse effettuata da
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+			1.2 & 21/01/2009	Aggiunta consuntivi fase RR-RPP & Bizzotto Piero \\
+			\hline
 			1.1 & 17/01/2009	Aggiornamento in seguito all'esito della Revisione dei Requisiti & Bizzotto Piero \\
 			\hline
 			1.0 & 	 09$\slash$12$\slash$2008 Verifica finale in preparazione al rilascio & Cunico Marco \\
@@ -571,6 +573,14 @@ Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impi
 	\label{tab:cons_RR-RPP}
 	\end{center}	
 \end{table}
+
+\begin{center}\textbf{Ore/Ruolo}
+\end{center}
+\includegraphics[width=300pt]{Cons_RR-RPP2}
+
+\begin{center}\textbf{Costo/Ruolo}
+\end{center}
+\includegraphics[width=350pt]{Cons_RR-RPP1}
 
 
 \begin{table}[!h]
